--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "selimcanglr.github.io",
+  "homepage": "https://linguist-ai.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "gh-pages -d dist",
+    "deploy": "npm run build"
   },
   "dependencies": {
     "@mantine/core": "^7.1.2",
@@ -25,6 +28,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.8.0",
     "postcss-simple-vars": "^7.0.1",
