--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "selimcanglr.github.io",
+  "name": "linguist-ai.github.io",
   "homepage": "https://linguist-ai.github.io",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
