--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.8.0",
     "postcss-simple-vars": "^7.0.1",
+    "rollup-plugin-copy": "^3.5.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
